grid instead of flexbox to fix gaps

--- a/src/index.css
+++ b/src/index.css
@@ -300,10 +300,11 @@ body {
   );
 }
 
-
 @media only screen and (max-width: 480px) {
   .current {
-    flex-direction: column;
+    align-items: flex-end;
+    flex-direction: row;
+    justify-content: space-between;
   }
   .content {
     margin-left: 0.5rem;
@@ -312,6 +313,7 @@ body {
   .today {
     width: 100%;
     margin-top: 0;
+    padding: 1rem;
   }
   .search {
     margin: 1rem 0;
@@ -322,7 +324,8 @@ body {
   .hour-cards {
     gap: 10px;
     margin-bottom: 2rem;
-    display: inline-flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
   .result {
     margin: 0.5rem;
@@ -332,5 +335,8 @@ body {
   }
   table {
     padding: 0.5rem;
+  }
+  .forecast {
+    display: grid;
   }
 }
